<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity">

    <EditText
        android:id="@+id/editText_movieName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup_movieType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/editText_movieName"
        app:layout_constraintStart_toStartOf="@+id/editText_movieName"
        app:layout_constraintTop_toBottomOf="@+id/editText_movieName">

        <RadioButton
            android:id="@+id/radioButton_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/movie"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/radioButton_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Series" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout_seasonNepisode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup_movieType"
        app:layout_constraintStart_toStartOf="@+id/radioGroup_movieType"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_movieType">

        <EditText
            android:id="@+id/editText_season"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/season"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText_episode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/episode"
            android:inputType="number"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText_timeStamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="Time stamp"
        android:inputType="time"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup_movieType"
        app:layout_constraintStart_toStartOf="@+id/radioGroup_movieType"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_seasonNepisode" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/editText_timeStamp"
        app:layout_constraintStart_toStartOf="@+id/editText_timeStamp"
        app:layout_constraintTop_toBottomOf="@+id/editText_timeStamp" />

</androidx.constraintlayout.widget.ConstraintLayout>